# Adamec

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss  package.json  tailwind.config.js  vite.config.ts  wrangler.toml
src/: ambient.d.ts  app.html  app.postcss  app.rs  main.rs
src/lib/: AddToCartButton.svelte  ConfirmButton.svelte  Expandable.svelte  GobackButton.svelte  GotoCartButton.svelte  GotoContactButton.svelte  Intro.svelte  Loader.svelte  Message.svelte  Product.svelte  Section.svelte  TitleCard.svelte  VerticalSectionExpandable.svelte  VerticalSeperator.svelte  VerticalSeperatorExpandable.svelte  cart.ts  components.ts  math.ts  messages.ts  products.ts
src/lib/components/: InstagramEtc.svelte
src/lib/components/backgroundblur/: BackgroundBlur.svelte
src/lib/components/button/: ButtonInternal.svelte  LinkButton.svelte
src/lib/components/footer/: Footer.svelte
src/lib/components/header/: Header.svelte  TextButtons.svelte
src/lib/components/icons/: Icon.svelte  Logo.svelte
src/lib/components/image/: Image.svelte  ImageInternal.svelte
src/lib/components/intro/: Intro.svelte
src/lib/components/text/: Text.svelte  (+1 more)
src/lib/stores/: lenisStore.ts
src/lib/util/: Lenis.svelte  useFrame.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/blog/: +layout.svelte
src/routes/cart/: +page.server.ts.txt  +page.svelte
src/routes/contact/: +page.svelte
src/routes/payment/: +page.svelte.example
src/routes/projects/: +page.svelte
src/routes/thanks/: +page.svelte
(+14 files in other folders)
