[package]
name = "adamec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
gloo = "0.11"
gloo-utils = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
   "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]

# [profile.release]
# # less code to include into binary
# panic = 'abort'
# # optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# # optimization for size ( more aggressive )
# opt-level = 'z'
# # optimization for size
# # opt-level = 's'
# # link time optimization using using whole-program analysis
# lto = true